testsuite/tests/indexed-types/should_fail/T9357.stderr

T9357.hs:12:15: error:
    • Illegal polymorphic type: forall (a :: TYPE t). a -> a
    • In the type instance declaration for ‘F’
